--- a/src/app/make/maketesis/maketesis.component.html
+++ b/src/app/make/maketesis/maketesis.component.html
@@ -1,46 +1,59 @@
 <main class="mycontainer">
     <div class="mysidebar">
-        <div class="search" >
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Buscar...." aria-label="Buscar...." aria-describedby="basic-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button>
-                </div>
-            </div>
-        </div>
         <div class="search">
+            <form class="row g-3" [formGroup]="searchContent" (ngSubmit)="onSubmitSearchContent()">
+                <div class="col-auto">
+                    <label for="search" class="visually-hidden">Nombre de Proyecto</label>
+                    <input type="text" class="form-control-plaintext" formControlName="search"
+                        placeholder="Buscar Contenido...">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-3">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </form>
+            <!-- <div class="input-group">
+                <input type="text" class="form-control" placeholder="Buscar...." aria-label="Buscar...."
+                    aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button>
+                </div>
+            </div> -->
+        </div>
+        <!-- <div class="search">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#agregarItem">
                 Agregar
             </button>
-        </div>
+        </div> -->
         <div class="itemsgroup">
-            <div *ngFor="let res of resultadosBusqueda"> 
-                <!-- <div class="drag-handler"></div> --> 
-                <div class="itemdrag" draggable="true" (dragstart)="drag($event)" [innerHTML]="res.description">
+            <div *ngFor="let res of resultadosBusqueda">
+                <div class="itemdrag" draggable="true" (dragstart)="drag($event)" [innerHTML]="res['content']">
                 </div>
             </div>
         </div>
     </div>
-    <div class="mycontent"> 
+    <div class="mycontent">
         <!-- <angular-editor  id="editor1" 
             [config]="editorConfig" [(ngModel)]="htmlContent"></angular-editor> -->
-          <div id="opened" class="board-body" (drop)="drop($event)" 
-          (dragover)="allowDrop($event)">
-              <div class="card bg-light-blue mb-2" id="drag1" draggable="true" (dragstart)="drag($event)">
-                  draggable <strong>jeje</strong> card 1
-              </div>
-          </div>
 
-          <angular-editor  id="editor1" 
-          
-            [config]="editorConfig" [(ngModel)]="htmlContent"></angular-editor>
-        <button (click)="generarDoc()" >Generar</button>
+        <!-- <div id="opened" class="board-body" (drop)="drop($event)" (dragover)="allowDrop($event)">
+            <div class="card bg-light-blue mb-2" id="drag1" draggable="true" (dragstart)="drag($event)">
+                draggable <strong>jeje</strong> card 1
+            </div>
+        </div> -->
+
+        <angular-editor id="editor1" [config]="editorConfig" [(ngModel)]="htmlContent"></angular-editor>
+        <button (click)="generarDoc()">Generar</button>
+        <div>
+            <pre>{{htmlContent}}</pre>
+        </div>
     </div>
 </main>
 
 <!-- Button trigger modal -->
-  
-  <!-- Modal -->
+
+<!-- Modal -->
 <!-- <div class="modal fade" id="agregarItem" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-scrollable modal-lg">
     <div class="modal-content">
@@ -87,9 +100,9 @@
 </div> -->
 
 <!-- (mouseover)="oki()" (mouseout)="okio()" -->
-    <!-- (focus)="oki()" (focusout)="okio()" -->
-    <!-- (mouseover)="oki()" (focusout)="okio()" -->
-    <!-- (focus)="oki()" (mouseover)="oki()" (focusout)="okio()" -->
+<!-- (focus)="oki()" (focusout)="okio()" -->
+<!-- (mouseover)="oki()" (focusout)="okio()" -->
+<!-- (focus)="oki()" (mouseover)="oki()" (focusout)="okio()" -->
 
 
 <!-- <div id="opened" class="board-body" (drop)="drop($event)" (dragover)="allowDrop($event)">
