--- a/src/app/heardernav/heardernav.component.html
+++ b/src/app/heardernav/heardernav.component.html
@@ -1,18 +1,37 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <div class="container-fluid">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="" (click)="home()">Inicio</a>
+            </li>
+            <!-- <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li> -->
+        </ul>
+        <ul *ngIf="!authService.isLoggedIn()" class="navbar-nav nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active" href="/signin">Iniciar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="/signup">Registrarse</a>
+            </li>
+        </ul>
+        <ul *ngIf="authService.isLoggedIn() && authService.getCurrentUser()!=undefined" class="navbar-nav nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active" href="/profile">{{authService.getCurrentUser()['name']}}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="#" (click)="cerrarSession()">Cerrar Sesion</a>
+            </li>
+        </ul>
     </div>
-  </nav>
+</nav>
+<!-- <div>
+  <pre>{{authService.getCurrentUser() | json }}</pre>
+</div> -->
