--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+/* @import '~bootstrap/dist/css/bootstrap.min.css'; */
+
+
 /* You can add global styles to this file, and also import other style files */
 * {
     box-sizing: border-box;
